--- a/8.0/openerp-server.conf
+++ b/8.0/openerp-server.conf
@@ -1,5 +1,5 @@
 [options]
-addons_path = /mnt/extra-addons,/usr/lib/python2.7/dist-packages/openerp/addons
+addons_path = /mnt/extra-addons,/mnt/extra-addons/l10n-brazil,/mnt/extra-addons/account-fiscal-rule,/mnt/extra-addons/odoo-brazil-eletronic-documents,/mnt/extra-addons/server-tools,/usr/lib/python2.7/dist-packages/openerp/addons
 data_dir = /var/lib/odoo
 auto_reload = True
 ; admin_passwd = admin
